--- a/design.tex
+++ b/design.tex
@@ -1,4 +1,4 @@
-\section{Design Overview}\label{s:design}
+\section{\name Overview}\label{s:design}
 \begin{figure}
     \centering
     \begin{subfigure}[b]{0.5\textwidth}
