--- a/ref.bib
+++ b/ref.bib
@@ -698,6 +698,13 @@ year = {2013},
 author = {Eric Dumazet},
 }
 
+@misc{fq-codel,
+title = {{CoDel - Fair Queuing (FQ) with Controlled Delay (CoDel)}},
+howpublished={\url{http://man7.org/linux/man-pages/man8/tc-fq_codel.8.html}},
+year = {2012},
+author = {Eric Dumazet},
+}
+
 @misc{the-case-for-rdma,
 title = {{The case for RDMA}},
 howpublished={\url{http://rdmaconsortium.org/home/The_Case_for_RDMA020531.pdf}},
@@ -1631,4 +1638,11 @@ title = {A Secure Environment for Untrusted Helper Applications (Confining the W
 @misc{cisco-qos,
     title = {{Catalyst 4500 Series Switch SW Configuration Guide, Release IOS-XE 3.2.xSG}},
     howpublished = {\url{https://www.cisco.com/c/en/us/td/docs/switches/lan/catalyst4500/12-2/3-1-1SG/configuration/guide/config/qos.html}},
+}
+
+@inproceedings {ups,
+author = {Radhika Mittal and Rachit Agarwal and Sylvia Ratnasamy and Scott Shenker},
+title = {Universal Packet Scheduling},
+booktitle = {13th {USENIX} Symposium on Networked Systems Design and Implementation ({NSDI} 16)},
+year = {2016},
 }
