--- a/impl.tex
+++ b/impl.tex
@@ -17,16 +17,16 @@ The \outbox can, therefore, be implemented entirely in hardware if necessary \ra
 \radhika{We envision the control plane to be implemented in software, while the data plane can be implemented in...(the line you had before)}
 
 \subsection{Prototype}\label{s:impl:prototype}
-For our prototype, we implement the inbox data-plane using Linux \texttt{tc}~\cite{tc}, and we limit our implementations of scheduling policy to those already widely available in the Linux kernel.
-We patch the TBF queueing discipline (qdisc)~\cite{tbf} to enforce rates, and modify its ``inner\_qdisc'' to use a qdisc that enforces some scheduling policy.
+For our prototype, we implement the \inbox data-plane using Linux \texttt{tc}~\cite{tc}, and we limit our implementations of scheduling policy to those already widely available in the Linux kernel.
+We patch the TBF queueing discipline (qdisc)~\cite{tbf} to detect epoch boundary packets, transmit feedback to the control plane using a netlink socket, and make the internal scheduling policy configurable.
+We express scheduling policy by changing TBF's ``inner\_qdisc'' from the default FIFO to a work-conserving, scheduling qdisc: we support SFQ~\cite{sfq} and FQ-CoDel~\cite{fq-codel}.
 Our patch to the TBF qdisc comprises $112$ lines of C.
-The patch adds the functionality to detect epoch boundary packets, transmit feedback to the control plane using a netlink socket, and adjust the internal scheduling policy. 
-Additionally, we remove one line in the rate update to disable re-filling the token bucket on rate changes to prevent a penalty for frequent rate updates.
+\an{cut?}\an{Additionally, we remove one line in the rate update to disable re-filling the token bucket on rate changes to prevent a penalty for frequent rate updates\footnote{by default, TBF instantaneously re-fills the token bucket when the set rate changes. In our implementation, the \inbox sets the rate frequently, causing rate fluctuations. We therefore disable this functionality.}.}
 
 We implement the \inbox control plane to run in user-space in $1167$ lines of Rust. 
 It uses \texttt{libnl} to communicate with the qdisc, and \texttt{libccp}~\cite{ccp} to communicate with the congestion control algorithm via Unix-domain sockets.
 It maintains the congestion control state of each bundle, but does not maintain (or observe) per-flow state.
-\radhika{no. of LoC for \inbox dataplane?}
+\radhika{no. of LoC for \inbox dataplane?} \an{first paragraph of this section?}
 
 We implement the \outbox using \texttt{libpcap} in $188$ lines of Rust. It listens for packets on the interface, checks for epoch packets, and sends the reports to the \inbox. It must maintain per-bundle counters (described in \S\ref{s:impl:discovery}).
 
@@ -43,24 +43,29 @@ packet. (5) It sends an out-of-band UDP message to the \inbox containing the has
 (6) The \inbox receives the UDP message, and uses it to calculate the epochs and measurements as described 
 in \S\ref{s:measurement}.
 
-(7) Asynchronously, the \inbox invokes the congestion control algorithm every $10$ms \fc{periodically, for our prototype we set it to be 10ms, cite ccp} via \texttt{libccp},
+(7) Asynchronously, the \inbox invokes the congestion control algorithm every $10$ms\footnote{Prior work shows~\cite{ccp} that the datapath need only invoke congestion control algorithms only on RTT-timescales, and evaluates congestion control algorithms on their sensitivity to this period.}.
+via \texttt{libccp},
 giving it a chance to observe any new measurements and change its behavior. (8) If it decides to update
 the bundle rate or congestion window, the \inbox communicates this to the qdisc
 using \texttt{libnl}. Since the qdisc only supports rate enforcement, if the algorithm
 also uses a congestion window, the \inbox computes $\text{\emph{effective rate}} = \frac{\text{CWND}}{\text{RTT}}$
 and sets the rate of the qdisc to the minimum of the explicit rate and this effective rate\fc{only bbr uses this, if we cut bbr, cut this setion too?}.
-Upon receiving new RTT samples, the \inbox updates the effective rate, and updates the qdisc rate
-if appropriate.
+Upon receiving new RTT samples, the \inbox updates the effective rate, and updates the qdisc rate if appropriate.
 
 \radhika{i liked this subsection!}
-
 
 \subsection{Congestion Control}\label{s:impl:cc}
 We use existing implementations of congestion control algorithms on CCP~\cite{ccp}, a platform for expressing congestion control algorithms in an asynchronous format; since CCP algorithms are already designed to receive network feedback asynchronously, they are a natural choice for our epoch-based measurement architecture. \radhika{this sentence should comer earlier, maybe when you first mention ``control-plane'' at the beginning of Sec 5, especially since 5.2 mentions CCP and libccp.}
 
 \input{cc-comparison}
-Indeed, \name successfully shapes the traffic of component flows to assume the characteristics of its congestion control algorithm. 
+Indeed, \name successfully shapes the traffic of component flows to assume the characteristics of its congestion control algorithm.
 Figure~\ref{fig:cc:comparison} shows that for the three congestion control algorithms we evaluate, BBR~\cite{bbr}, Copa~\cite{copa}, and Nimbus~\cite{nimbus}, the throughput (in Figure~\ref{fig:cc:comparison:a}) and queueing delay (in Figure~\ref{fig:cc:comparison:b}) distributions over a one-minute experiment are similar to the same algorithm running at the end-host (\ie without \name).
+
+\an{maybe cut BBR entirely}
+\an{
+BBR's delay distribution suffers because of its interaction with the end-to-end congestion control. When BBR enters its \texttt{PROBE\_RTT} mode by setting a congestion window of $4$ packets, end-host implementations simply stop transmitting.
+However, with \name the end-host implementation is Cubic; it continues probing for bandwidth until the \inbox is forced to drop packets.
+}
 
 \an{move to earlier, maybe design:}
 It is important to note that traditional loss-based congestion controllers (\ie Cubic~\cite{cubic}, NewReno~\cite{newreno}) are poor choices for \name. 
