--- a/graphs/varying-offered-load.Rnw
+++ b/graphs/varying-offered-load.Rnw
@@ -1,29 +1,34 @@
 \begin{figure}
     \centering
-    <<eval:offeredload,cache=TRUE,echo=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=2>>=
+    <<eval:offeredload,fig.showtext=TRUE,cache=TRUE,echo=FALSE,warning=FALSE,message=FALSE,fig.width='\\columnwidth',fig.height=2>>=
 library(ggplot2)
+library(showtext)
+font_add_google("Lato")
+showtext_auto()
 df <- read.csv("pl-caidacdf.data", sep=" ")
 df$Duration <- df$Duration.usec. / 1e6
 bw <- 12e6
 df$ofct <- (df$Size / bw) + 0.05
 df$Slowdown <- df$Duration / df$ofct
 
-ggplot(df, aes(x=Slowdown, linetype=Alg)) +
-    stat_ecdf() +
-    ylab("CDF") +
-    xlim(1, 5) + 
-    facet_wrap(~Load, nrow=1, ncol=3) +
-    scale_linetype_manual(
-        limit=c("copa_sfq", "nobundler_fifo"),
-        labels=c("copa_sfq" = "Bundler", "nobundler_fifo" = "Baseline"),
-        values=c("copa_sfq" = "solid", "nobundler_fifo" = "twodash")
+ggplot(df, aes(
+        x=Alg, fill=Alg, y=Slowdown
+    )) +
+    geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
+    facet_wrap(~Load) +
+    ylab("Slowdown") +
+   scale_fill_brewer(type="qual", palette=2) +
+    scale_x_discrete(
+        limit=c("nobundler_fifo", "copa_sfq"),
+        labels=c(
+            "nobundler_fifo" = "Baseline",
+            "copa_sfq" = "Bundler"
+        ),
+        scale_name=NULL, name=NULL,
     ) +
-    theme_minimal() +
-    theme(
-        legend.position=c(0.85, 0.3),
-        legend.title=element_blank(),
-        legend.text=element_text(size=12)
-    )
+    coord_cartesian(ylim=c(1,1.5)) +
+    theme_minimal() + 
+    theme(text = element_text(size=18, family="Lato", face="bold"))
 @
     \caption{\name offers diminishing returns with lower amounts of offered load. \an{probably useful to slice this data by flow size if space}}
     \label{fig:eval:offeredload}
