--- a/intro.tex
+++ b/intro.tex
@@ -29,9 +29,9 @@ We further note that middleboxes are now prevalent in the Internet architecture~
 We, therefore, propose a new type of middlebox, called a \name, that (1) aggregates the traffic at the customer's egress into appropriate bundles whose component flows share a common receiver domain, (2) does rate control for each bundle to shift the corresponding queues from within the network to itself, and (3) applies scheduling and queue management policies within each bundle as per the customer's requirements. 
 
 %\radhika{add a few lines on \name's high level architecture.} 
- A \name comprises of a pair of middleboxes: a \inbox that sits at the sender's egress and a \outbox that sits at the receiver's ingress. Thus, a bundle is defined as a group of flows that traverse through the same \inbox and \outbox pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox for classifying the flows into appropriate bundles, and for collecting congestion signals (such as the round-trip time, and the rate at which bundled traffic arrives at the \outbox). These signals are used by a standard congestion control algorithm that runs at the \inbox and computes the appropriate sending rate for each bundle, such that the queuing induced by the bundled traffic within the network is minimized, and the queue build up occurs at the \inbox instead. 
+ A \name comprises of a pair of middleboxes: a \inbox that sits at the sender's egress and a \outbox that sits at the receiver's ingress. Thus, a bundle is defined as a group of flows that traverse through the same \inbox and \outbox pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox for (i) classifying the flows into appropriate bundles, and,  (ii) collecting congestion signals, such as the round-trip time, and the rate at which bundled traffic arrives at the \outbox. These signals are used by a standard congestion control algorithm (with certain properties, as described later) that runs at the \inbox and computes appropriate sending rates for each bundle. The computed sending rates are such that the queuing induced by the bundled traffic in the middle of the network is minimized and is incurred at the \inbox instead, while ensuring that the bottleneck links in the network are not under-utilized. 
  
- We introduce a novel light-weight methodology for the \inbox and \outbox coordination, which does not require any per-flow state (only requiring per-bundle state), and does not require any modifications to the packets traversing the \name boxes. Furthermore, our approach only requires introducing the \name boxes at the customer's edges, and requires no changes to the individual end-hosts or to the routers in the public Internet. 
+ We introduce a novel light-weight methodology for the \inbox and \outbox coordination, which does not require any per-flow state (only requiring per-bundle state), and does not require any modifications to the packets traversing the \name boxes. Furthermore, our overall approach only requires introducing the \name boxes at the customer's edges, and requires no changes to the individual end-hosts or to the routers in the public Internet. 
  
  Notice that our goal is to only do scheduling and queue management across the traffic within the same bundle (and therefore belonging to a single customer). We do not even attempt to tackle the significantly more ambitious objective of  scheduling the traffic across different customers, which would require dealing with the potential differences in their requirements. Nonetheless, we believe that our work, in its simplicity, is a significant step towards enabling some of the benefits of scheduling and queue management for the public Internet. 
  %\radhika{should i move it up by 2 paragraphs (i.e. right after the 3 points)?} 
