Updates from ShareLaTeX

--- a/intro.tex
+++ b/intro.tex
@@ -33,7 +33,7 @@ We, therefore, propose a new type of middlebox, called a \name, that (1) aggrega
  
  We introduce a novel light-weight methodology for the \inbox and \outbox coordination, which does not require any per-flow state (only requiring per-bundle state), and does not require any modifications to the packets traversing the \name boxes. Furthermore, our overall approach only requires introducing the \name boxes at the customer's edges, and requires no changes to the individual end-hosts or to the routers in the public Internet. 
  
- Notice that our goal is to only do scheduling and queue management across the traffic within the same bundle (and therefore belonging to a single customer). We do not even attempt to tackle the significantly more ambitious objective of  scheduling the traffic across different customers, which would require dealing with the potential differences in their requirements. Nonetheless, we believe that our work, in its simplicity, is a significant step towards enabling some of the benefits of scheduling and queue management for the public Internet. 
+ Notice that our goal is to only do scheduling and queue management across the traffic within the same bundle (and therefore belonging to a single customer). We do not even attempt to tackle the more ambitious objective of  scheduling traffic across different customers, which would require dealing with the potential differences in their requirements. Furthermore, as we will discuss later, there can be instances where \name fails to provide any performance benefits for the bundled traffic, and falls back to the status quo performance. Nonetheless, we believe that our work, in its simplicity, provides an \emph{immediately deployable} solution for enabling some of the benefits of scheduling and queue management in the public Internet, which is something that has been missing from the scheduling literature so far. 
  %\radhika{should i move it up by 2 paragraphs (i.e. right after the 3 points)?} 
 
 % We make the following key contributions:
